# netplus

./: .gitignore  LICENSE  README.md  lfs.note.txt
3rd/c-ares/: steps_to_upgrade_c_ares.txt
3rd/c-ares/c-ares-1.17.2/: CMakeLists.txt  Makefile.in  aclocal.m4  configure
3rd/c-ares/c-ares-1.18.1/: Makefile  config.status  libcares.pc  libtool
3rd/getopt/: getopt.c  getopt.h
3rd/llhttp/: note.msvc.txt
3rd/stack_walker/: StackWalker.cpp  StackWalker.h
3rd/udns/0.4/: config.h  inet_XtoX.ci  udns.h  udns_XtoX.c  udns_jran.c  udns_parse.c  udns_resolver.c
3rd_external/: .gitattributes  readme.txt
docs/: [netplus] 初心之让人人能写高性能网络服务器.docx  [netplus]初见Netplus快速开始之PingPong Example.docx  arch.armv7a.txt  arch.gcc.x64.txt  container_memory_management.note.txt  cpp.note.txt  epoll.note.txt  known_issue.txt  memory_note.txt  netplus.pptx  sizeof_class_dump.x64.txt
include/: netp.hpp
include/netp/: CPUID.hpp  adapter.hpp  address.hpp  any.hpp  app.hpp  benchmark.hpp  bytes_helper.hpp  bytes_ringbuffer.hpp  channel.hpp  channel_handler.hpp  channel_handler_context.hpp  channel_pipeline.hpp  condition.hpp  constants.hpp  core.hpp  dns_resolver.hpp  epoll_poller.hpp  eth.hpp  event_broker.hpp  event_loop.hpp  exception.hpp  funcs.hpp  heap.hpp  helper.hpp  icmp.hpp  io_event.hpp  io_event_loop.hpp  io_monitor.hpp  iocp_poller.hpp  ip.hpp  ipv4.hpp  ipv6.hpp  len_str.hpp  list.hpp  logger_broker.hpp  memory.hpp  memory_unit_test.hpp  mutex.hpp  packet.hpp  poller_abstract.hpp  (+27 more)
include/netp/core/: build.hpp  compiler.hpp  config.hpp  macros.hpp  platform.hpp
include/netp/handler/: dh_symmetric_encrypt.hpp  dump_in_len.hpp  dump_in_text.hpp  dump_out_len.hpp  dump_out_text.hpp  echo.hpp  fragment.hpp  hlen.hpp  http.hpp  mux.hpp  symmetric_encrypt.hpp  tls.hpp  tls_client.hpp  tls_config.hpp  tls_credentials.hpp  tls_handler.hpp  tls_policy.hpp  tls_server.hpp  websocket.hpp
include/netp/http/: chunk_encoder.hpp  client.hpp  message.hpp  parser.hpp  url_parser.hpp
include/netp/l2/: m6.hpp
include/netp/logger/: android_log_print.hpp  console_logger.hpp  file_logger.hpp  logger_abstract.hpp  net_logger.hpp  sys_logger.hpp
include/netp/os/: api_wrapper.hpp  winsock_helper.hpp
include/netp/security/: cipher_abstract.hpp  crc.hpp  dh.hpp  fletcher.hpp  formula.hpp  murmurhash.hpp  obfuscate.hpp  xxtea.hpp
include/netp/task/: runner.hpp  scheduler.hpp  task.hpp
include/netp/thread_impl/: condition.hpp  mutex.hpp  mutex_basic.hpp  shared_mutex.hpp  spin_mutex.hpp  thread_basic.hpp
include/netp/traffic/: forwarder_detector.hpp  forwarder_iptcp.hpp  forwarder_iptcp_payload.hpp  forwarder_ipudp.hpp  forwarder_ipudp_payload.hpp  forwarder_l2.hpp  repeater.hpp
projects/android-ndk/: Android.mk  Application.mk  _build.bat
projects/cmake/: CMakeLists.txt  README.md
projects/cmake/modules/: Findnetplus.cmake
projects/codeblocks/netplus/: netplus.cbp
projects/linux/: _mk-generic.inc  generic-header.in  generic-header.inc  makefile  note.gcc.txt  note.makefile.txt  todo.txt
projects/makefile/: _mk-generic.inc  makefile  note.makefile.txt
projects/msvc/: netplus.sln  netplus.vcxproj  netplus.vcxproj.filters  with_botan.props
projects/msvc/vsprops_local/: c-ares.props  common.props  debug.props  release.props
src/: CPUID.cpp  adapter.cpp  address.cpp  app.cpp  channel_handler.cpp  channel_handler_context.cpp  channel_pipeline.cpp  dns_resolver.cpp  event_loop.cpp  exception.cpp  funcs.cpp  helper.cpp  io_event_loop.cpp  ip.cpp  logger_broker.cpp  memory.cpp  memory_unit_test.cpp  rpc.cpp  scheduler.cpp  signal_broker.cpp  socket.cpp  socket_base.cpp  socket_channel.cpp  socket_channel_iocp.cpp  socket_func.cpp  thread.cpp  timer.cpp  utils.cpp
src/handler/: dh_symmetric_encrypt.cpp  hlen.cpp  http.cpp  mux.cpp  tls.cpp  tls_client.cpp  tls_handler.cpp  tls_server.cpp  websocket.cpp
src/http/: client.cpp  message.cpp  parser.cpp  url_parser.cpp
src/logger/: android_log_print.cpp  console_logger.cpp  file_logger.cpp  net_logger.cpp  sys_logger.cpp
src/os/: api_wrapper_android.cpp  api_wrapper_gnulinux.cpp  api_wrapper_win.cpp  winsock_helper.cpp
src/task/: runner.cpp  scheduler.cpp
src/thread_impl/: mutex.cpp  shared_mutex.cpp
src/traffic/: forwarder_detector.cpp  forwarder_iptcp_payload.cpp
test/: AVX2.props  _libs-config.inc  botan.props  debug.props  generic.props  include_netp.props  release.props  with_botan.props
test/android_ndk/mk/: Android.mk  Application.mk  _clean.bat  build.bat  build_debug.bat  build_release.bat
test/android_ndk/src/: main.cpp
test/ca/cert/: server_cert.pem  server_csr.pem  server_key.pem
test/ca/netplus/: ca_cert.pem  ca_key.pem
test/condition_cost/src/: main.cpp
test/cs/projects/: client.sln  client.vcxproj  server.sln  server.vcxproj
test/cs/src/: ServiceShare.h  client.cpp  server.cpp
test/div_cost/projects/: result.txt
test/div_cost/src/: main.cpp
test/dns/src/: main.cpp
test/event_broker/src/: main.cpp
test/hash/murmurhash/: PropertySheet.props  main.cpp  murmurhash.sln  murmurhash.vcxproj
test/heap/heap/: heap.sln  heap.vcxproj  heap.vcxproj.filters  main.cpp
test/heap/projects/: PropertySheet.props  heap.sln  heap.vcxproj  heap.vcxproj.filters
test/heap/src/: main.cpp
test/hello_world/: hello_world.cpp
test/hello_world/src/: main.cpp
test/http/src/: client.cpp
test/httpclient/src/: main.cpp
test/httpserver/src/: http_server.cpp
test/mux/projects/cmake/: CMakeLists.txt
test/mux/src/: mux_client.cpp  mux_server.cpp  shared.hpp
test/netlog/src/: main.cpp
test/pingpong/src/: main.cpp
test/promise/src/: main.cpp
test/promise_2/src/: main.cpp
test/rpc/projects/: PropertySheet.props  msbuild.bat  rpc1.sln  rpc1.vcxproj  rpc1.vcxproj.filters  rpc2.sln  rpc2.vcxproj  rpc2.vcxproj.filters
test/rpc/projects/cmake/: CMakeLists.txt
test/rpc/src/: rpc1.cpp  rpc2.cpp  rpc_node1.cpp  rpc_node2.cpp  shared.hpp
test/thread/projects/cmake/: CMakeLists.txt
test/thread/src/: main.cpp
test/throughput/src/: main.cpp  thp.cpp  thp_handler.hpp  thp_param.hpp  thp_socket.hpp
(+163 files in other folders)
